@@ -9,6 +9,14 @@ Post-v3.2.0
    - ovs-dpctl:
      * Support removal of default CT zone limit via ovs-dpctl, e.g.
        "ovs-appctl dpctl/ct-del-limits default"
+   - ovs-vsctl:
+     * New commands 'add-zone-limit', 'del-zone-limit' and 'list-zone-limit'
+       to manage the maximum number of connections in conntrack zones via
+       a new 'limit' column in the 'CT_Zone' database table.
+     * New command 'set-zone-default-limit' and 'del-zone-default-limit' to
+       manage the maximum number of connections in conntrack zones that are
+       not explicitly defined otherwise via new 'ct_zone_default_limit' column
+       in the 'Datapath' table.
 
 
 v3.2.0 - 17 Aug 2023
